--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "logtron"
-version = "0.1.1"
+version = "0.1.2"
 description = "A simple logging library with JSON log formatting"
 authors = ["Ilija Stevcev <ilija1@gmail.com>"]
 license = "Apache-2.0"
@@ -12,6 +12,7 @@ keywords = ["Logging", "JSON"]
 [tool.poetry.dependencies]
 python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
 pyyaml = "^5.3.1"
+importlib-metadata = "^1.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
