--- a/.travis.yml
+++ b/.travis.yml
@@ -18,25 +18,22 @@ before_install:
   - pip install poetry
 
 install:
-  - poetry install --no-root -v
-
-script: make ci
+  - poetry install
 
 jobs:
   include:
+    - stage: test
+      script:
+        - make ci
+        - make cover
+        - bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: skip
       python: "3.8"
       before_deploy:
-        - pip install --upgrade pip
-        - pip install poetry
-        - poetry config pypi-token.pypi $PYPI_PASSWORD
+        - poetry config http-basic.pypi __token__ $PYPI_PASSWORD
       deploy:
         provider: script
         script: poetry publish --build
         on:
           tags: true
-
-after_success:
-  - make cover
-  - bash <(curl -s https://codecov.io/bash)
