--- a/.travis.yml
+++ b/.travis.yml
@@ -13,21 +13,24 @@ stages:
   - name: deploy
     if: tag IS present
 
-before_install:
-  - pip install --upgrade pip
-  - pip install poetry
-
-install:
-  - poetry install
-
 jobs:
   include:
     - stage: test
+      before_install:
+        - pip install --upgrade pip
+        - pip install poetry
+      install:
+        - poetry install --no-root -v
       script:
         - make ci
         - make cover
         - bash <(curl -s https://codecov.io/bash)
     - stage: deploy
+      before_install:
+        - pip install --upgrade pip
+        - pip install poetry
+      install:
+        - poetry install
       script: skip
       python: "3.8"
       before_deploy:
