--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ jobs:
       dist: xenial
       python: "3.8"
       script: skip
-      before_deploy:
-        - poetry config http-basic.pypi __token__ $PYPI_PASSWORD
+      # before_deploy:
+      #   - poetry config http-basic.pypi __token__ $PYPI_PASSWORD
       deploy:
         provider: script
         script: poetry publish --build
