--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,17 @@ keywords = ["Logging", "JSON"]
 python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
 pyyaml = "^5.3.1"
 importlib-metadata = "^1.7.0"
+sphinx = {version = "^3.2.1", optional = true, python = ">=3.8.0"}
+sphinx-autoapi = {version = "^1.4.0", optional = true, python = ">=3.8.0"}
+sphinx-rtd-theme = {version = "^0.5.0", optional = true, python = ">=3.8.0"}
+tomlkit = {version = "^0.7.0", optional = true, python = ">=3.8.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
 pytest-cov = "^2.10.1"
+
+[tool.poetry.extras]
+sphinx = ["sphinx", "tomlkit", "sphinx-autoapi", "sphinx-rtd-theme"]
 
 [build-system]
 requires = ["poetry>=0.12"]
